agregue un parrafo de texto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Titulo</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet itaque, facere doloribus debitis necessitatibus illo qui, libero ea repellendus maiores excepturi. Atque dolorem a dolore totam nostrum minus est aliquid!</p>
 </body>
 </html>
